--- a/PaginaMujerLinda/PaginaMujerLinda.csproj
+++ b/PaginaMujerLinda/PaginaMujerLinda.csproj
@@ -142,6 +142,7 @@
     <Content Include="Global.asax" />
     <Content Include="MostrarMascota.aspx" />
     <Content Include="PaginaError.aspx" />
+    <Content Include="Publicacion_Mascotas.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -287,6 +288,13 @@
       <DependentUpon>PaginaError.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Publicacion_Mascotas.aspx.cs">
+      <DependentUpon>Publicacion_Mascotas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Publicacion_Mascotas.aspx.designer.cs">
+      <DependentUpon>Publicacion_Mascotas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="seleccion.aspx.cs">
       <DependentUpon>seleccion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
