--- a/PaginaMujerLinda/PaginaMujerLinda.csproj
+++ b/PaginaMujerLinda/PaginaMujerLinda.csproj
@@ -142,7 +142,7 @@
     <Content Include="Global.asax" />
     <Content Include="MostrarMascota.aspx" />
     <Content Include="PaginaError.aspx" />
-    <Content Include="Publicacion_Mascotas.aspx" />
+    <Content Include="PublicacionMascotas.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -288,12 +288,12 @@
       <DependentUpon>PaginaError.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Publicacion_Mascotas.aspx.cs">
-      <DependentUpon>Publicacion_Mascotas.aspx</DependentUpon>
+    <Compile Include="PublicacionMascotas.aspx.cs">
+      <DependentUpon>PublicacionMascotas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Publicacion_Mascotas.aspx.designer.cs">
-      <DependentUpon>Publicacion_Mascotas.aspx</DependentUpon>
+    <Compile Include="PublicacionMascotas.aspx.designer.cs">
+      <DependentUpon>PublicacionMascotas.aspx</DependentUpon>
     </Compile>
     <Compile Include="seleccion.aspx.cs">
       <DependentUpon>seleccion.aspx</DependentUpon>
