--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -77,6 +77,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConexionBD.cs" />
+    <Compile Include="Formulario1.cs" />
+    <Compile Include="Formulario2.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
