--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 PaginaMujerLinda/bin/
 PaginaMujerLinda/obj/
 PaginaMujerLinda/.vs/
+PaginaMujerLinda/PaginaMujerLinda.csproj.user
 
 #Modelo
 Modelo/bin/
