--- a/PaginaMujerLinda/PaginaMujerLinda.csproj
+++ b/PaginaMujerLinda/PaginaMujerLinda.csproj
@@ -170,6 +170,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="MasterFormularios.Master" />
+    <Content Include="PaginaGeneral.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -311,6 +312,13 @@
     </Compile>
     <Compile Include="PaginaError.aspx.designer.cs">
       <DependentUpon>PaginaError.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PaginaGeneral.Master.cs">
+      <DependentUpon>PaginaGeneral.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PaginaGeneral.Master.designer.cs">
+      <DependentUpon>PaginaGeneral.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicacionMascotas.aspx.cs">
