--- a/PaginaMujerLinda/PaginaMujerLinda.csproj
+++ b/PaginaMujerLinda/PaginaMujerLinda.csproj
@@ -167,6 +167,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="MasterFormularios.Master" />
+    <Content Include="Administrativos.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -220,6 +221,13 @@
     <Content Include="Scripts\popper-utils.js.map" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administrativos.Master.cs">
+      <DependentUpon>Administrativos.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Administrativos.Master.designer.cs">
+      <DependentUpon>Administrativos.Master</DependentUpon>
+    </Compile>
     <Compile Include="Adopciones.aspx.cs">
       <DependentUpon>Adopciones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
