Creacion formulario de crear usuarios, formulario 4, otros ajustes

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -79,6 +79,8 @@
     <Compile Include="ConexionBD.cs" />
     <Compile Include="Formulario1.cs" />
     <Compile Include="Formulario2.cs" />
+    <Compile Include="Formulario4Actuales.cs" />
+    <Compile Include="Formulario4Antiguos.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="MascotaDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
